2904 [FFmpeg AAC Encoder]   added FFmpeg AAC encoder. patch by Yarick Yermak (patch #71)
                            unlike the other AAC encoder this one is available without any additional actions
2903 [Chapter Creator]      added frame + output time code (if different from input)
                            improved/changed handling e.g. input/output fps will be locked based on source/preview
2902 [Profiles]             fixed not applying new settings immediately (regression of 2901)
2901 [OneClick]             fixed not selecting the desired profile in profile config (regression of 2898)
2900 [DGIndexNV/IM Indexer] fixed broken dgi file for multi segment input files (regression of 2897)
2899 [Settings]             fixed worker settings window when using High DPI (regression of 2884)
2898 [Main]                 fixed OneClick audio/video profile selections overwriting the main tab profile selections at next restart
2897 [DGIndexNV Indexer]    adjusted AVS script parameters (requires DGIndexNV 2053.163+)
                            mod2 is forced for crop values (was mod4 before)
                            added a check to ensure that the full path information is written into the dgi file


Changelog 2876 --> 2896

Features/Changes:
[Worker]               improved worker handling
                       - for each job type the process and I/O priority can be defined
                       - changing the priority in the progress window does change it only for the current job
                       - rule sets can be specified based on which it is determined how many jobs of which type are allowed to run in parallel
                       - settings to be found in the options window	  
[Main]                 some menu items have been moved/renamed:
                       - "options\settings"       to "options"
                       - "options\update"         to "tools\update"
                       - "workers\worker summary" to "view\worker overview"